# wasi2-sample

./: .gitignore  Cargo.toml  Makefile
async-host/: Cargo.toml
async-host/src/: main.rs
async-host/wit/: host-api.wit
async-pl/: Cargo.toml
async-pl/src/: main.rs
component_example/: Cargo.toml
component_example/src/: bindings.rs  lib.rs
component_example/wit/: host-api.wit  world.wit
pl/: Cargo.toml
pl/src/: main.rs
pl/wit/: host-api.wit
playground-jco/: .gitignore  Cargo.toml  Makefile  README.md  babel.config.json  entry.js  index.html  index.js  log-host.js  main.ts  package-lock.json  package.json  textencoderdecoder.ts  tsconfig.json  webpack.config.js
playground-jco/js/: example-resouceex.js  gas-driveapp-blob.js  gas-driveapp-file.js  gas-driveapp.js  gas-logger.js  gas-property-properties-service.js  gas-property-properties.js  gas-spreadsheetapp-range.js  gas-spreadsheetapp-sheet.js  gas-spreadsheetapp-spreadsheet.js  gas-spreadsheetapp.js
playground-jco/src/: bindings.rs  lib.rs
playground-jco/wit/: world.wit
plugin_example/: Cargo.toml  README.md
src/: bindings.rs  lib.rs
sync-host/: Cargo.toml
sync-host/src/: main.rs
sync-host/wit/: host-api.wit
