[package]
name = "playground-jco"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = { version = "0.18.0", default-features = false, features = [
    "realloc",
] }

wit-bindgen-rt = { version = "0.43.0", features = ["bitflags"] }


[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:playground-jco"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"wasi:logging" = { path = "./wit/deps/wasi-logging-0.1.0-draft" }
"example:resouceex" = { path = "./wit/deps/resource-example"}

# google apps script wit 
"gas:logger" = { path = "./wit/deps/google-apps-script-logger-0.1.0-alpha"}
"gas:drive-app" = { path = "./wit/deps/google-apps-script-driveapp-0.1.0-alpha"}
"gas:property" = { path = "./wit/deps/google-apps-script-property-0.1.0-alpha"}
"gas:spreadsheet-app" = { path = "./wit/deps/google-apps-script-spreadsheetapp-0.1.0-alpha" }
